# ChangeLog for gnome-base/gnome-applets
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-applets/ChangeLog,v 1.289 2009/05/22 11:50:43 nirbheek Exp $

  22 May 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  gnome-applets-2.26.1.ebuild:
  Add missing gstreamer deps for mixer applet (bug 270750)

  21 May 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  gnome-applets-2.26.1.ebuild:
  Partial fix for bug 270704

*gnome-applets-2.26.1 (11 May 2009)

  11 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -gnome-applets-2.20.1.ebuild, -gnome-applets-2.22.3.ebuild,
  -gnome-applets-2.24.1.ebuild, -gnome-applets-2.24.2.ebuild,
  +gnome-applets-2.26.1.ebuild,
  +files/gnome-applets-2.26.1-automagic-networkmanager.patch:
  New version for GNOME 2.26. Use networkmanager, enable policykit, use
  split python bindings, drop libgnome, gstreamer-0.8 usage. Still provide a
  mixer applet based on gstreamer until people move to pulseaudio. Clean up
  old revisions.

  27 Apr 2009; Jeroen Roovers <jer@gentoo.org> gnome-applets-2.24.3.1:
  Stable for HPPA (bug #260063).

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  gnome-applets-2.24.3.1.ebuild:
  Stable on sparc, bug #260063

  03 Apr 2009; Joseph Jezak <josejx@gentoo.org>
  gnome-applets-2.24.3.1.ebuild:
  Marked ppc stable for bug #262744.

  19 Mar 2009; Joseph Jezak <josejx@gentoo.org>
  gnome-applets-2.24.3.1.ebuild:
  Marked ~ppc.

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  gnome-applets-2.24.3.1.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org>
  gnome-applets-2.24.3.1.ebuild:
  x86 stable, bug #260063

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org>
  gnome-applets-2.24.3.1.ebuild:
  Marked stable on amd64

  05 Mar 2009; Brent Baude <ranger@gentoo.org>
  gnome-applets-2.24.3.1.ebuild:
  Marking gnome-applets-2.24.3.1 ppc64 stable for bug 260063
