@@ -2,6 +2,6 @@ AUX gnome-applets-2.26.1-automagic-networkmanager.patch 1601 RMD160 748c0b5b2f3f
 DIST gnome-applets-2.24.3.1.tar.bz2 7880607 RMD160 aa36ca16e88821a860d825bff9ab94e144e283f7 SHA1 cc9a121bb06f687c221902c24dbdbe37bd68b07f SHA256 b9a3d207b78755c49c49bf780815f3b25fd16b6c23f3815cdeb41b5c7d685185
 DIST gnome-applets-2.26.1.tar.bz2 8786596 RMD160 f76aa8a6b03e1375bad3bce5e2ee1b477a2e9097 SHA1 42b678064e4d0923c2130ac02f488871b9db7c88 SHA256 87a2262dd777a31dafda23d91da42f7b17e542dea51b5597ecada4fa74793a07
 EBUILD gnome-applets-2.24.3.1.ebuild 3245 RMD160 64be8ca1d33d471d1e433751ceea25521b6bf68d SHA1 d82e80301d104daa4c1e7dcb6de0cd6b83bc9692 SHA256 bfa46ae582b04483eca15f82ead35ea5a94d80e579e2d8179a032cc8999ba068
-EBUILD gnome-applets-2.26.1.ebuild 3829 RMD160 161a7f184a0871d4be7859b32db47cf0dc8e442b SHA1 e2673a6bc587ee81241658fc7c036b9c98cef7a7 SHA256 3529fdca61cbfb55f4296d46b8915f59031380ba3acf689ff6cafa5ae378f531
-MISC ChangeLog 41700 RMD160 e90de188176a942ca7f20fce79866649c3876cc7 SHA1 42c50ab89cd9ef041df4df16e5cf2252266605c7 SHA256 c5e3044cb266adea9c3918898b83b6f4683573825155b7b514815e908ecc2a89
+EBUILD gnome-applets-2.26.1.ebuild 3878 RMD160 0d2431fd8a0ec0f996a6c0f4f6cc7eb57eb7974c SHA1 ed6eaeca4c4adbefd5162b295b59c85a4b4430c6 SHA256 11a509d7f3f73bd706c08bd201b55fbfa9c52f17125e407d9567646f0c7d0ae8
+MISC ChangeLog 41866 RMD160 2dca4aef830c7d52dd935cba09fb739f2b9a33df SHA1 267161c91640eb513307b7092b8c77eb429e9d79 SHA256 8e212cde14522fa566385d202f5bcda6c383e18c57cb954a8fb36ab5c112f6eb
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
